# deepnlu

./: .gitignore  Dockerfile  Makefile  README.md  buildspec-deepnlu.yml  pyproject.toml
deepnlu/services/accipio/: Makefile  README.md  __init__.py  pyproject.toml
deepnlu/services/accipio/accipio/: __init__.py
deepnlu/services/accipio/jupe/: LRU Cache Test on API.ipynb
deepnlu/services/accipio/normalize/bp/: normalizer.py
deepnlu/services/accipio/normalize/svc/: normalize_text.py
deepnlu/services/accipio/normalize/tests/: test_normalizer.py
deepnlu/services/accipio/regression/: Grafflr-Core-0001.yaml  Grafflr-Core-0002.yaml  Grafflr-Core-0041.yaml  Grafflr-Core-0046.yaml
deepnlu/services/accipio/segmenter/bp/: segmenter.py
deepnlu/services/accipio/segmenter/svc/: perform_sentence_segmentation.py
deepnlu/services/accipio/stemmer/bp/: stemmer.py
deepnlu/services/accipio/stemmer/svc/: __init__.py  perform_porter_stemming.py
deepnlu/services/accipio/stemmer/tests/: test_stemmer.py
deepnlu/services/accipio/tests/: test_accipio.py  test_stemmer.py  test_tokenizer_graffl.py  test_tokenizer_whitespace.py
deepnlu/services/accipio/tokenizer/bp/: tokenizer.py
deepnlu/services/accipio/tokenizer/dmo/: __init__.py  character_level_tokenizer.py
deepnlu/services/accipio/tokenizer/dto/: currency_kb.py
deepnlu/services/accipio/tokenizer/svc/: tokenize_use_graffl.py  tokenize_use_whitespace.py
deepnlu/services/accipio/tokenizer/tests/: test_tokenizer_graffl.py  test_tokenizer_whitespace.py
deepnlu/services/erogito/: Makefile  __init__.py  erogito_api.py  pyproject.toml  test_erogito_api.py
deepnlu/services/erogito/autotaxo/bp/: autotaxo_orchestrator.py
deepnlu/services/erogito/erogito/: __init__.py  erogito_api.py
deepnlu/services/erogito/erogito/autotaxo/: README.md
deepnlu/services/erogito/parse/: README.md
deepnlu/services/erogito/parse/dmo/: graffl_parser_coordinates.py  graffl_parser_normalize.py  graffl_parser_resultset.py  graffl_parser_spacy.py  graffl_parser_squots.py  graffl_parser_wordnet.py
deepnlu/services/erogito/parse/svc/: parse_input_tokens.py
deepnlu/services/erogito/parse/tests/: test_generate_displacy_output.py
deepnlu/services/erogito/tests/: autotaxo.py  test_erogito_api.py
deepnlu/services/portendo/: Makefile  README.md  __init__.py  portendo.py  pyproject.toml
deepnlu/services/portendo/bp/: portendo.py
deepnlu/services/portendo/dmo/: __init__.py  computer_exclude_oneof.py  computer_include_allof.py  computer_include_oneof.py  computer_include_recursive.py  computer_startswith.py  confidence_exclude_allof.py  confidence_include_allof.py  file_loader_mapping.py  file_loader_testcases.py  index_exclude_allof.py  index_scoring.py  index_startswith.py  mapping_remove_duplicates.py  mapping_score_candidates.py  mapping_select_candidates.py
deepnlu/services/portendo/dto/: __init__.py
deepnlu/services/portendo/entity/bp/: __init__.py  entity_orchestrator.py
deepnlu/services/portendo/entity/svc/: __init__.py  analyze_entity_names.py  find_entity_triggers.py  form_entity_inference.py
deepnlu/services/portendo/entity/tests/: test_analyze_entity_names.py  test_entity_orchestrator.py
deepnlu/services/portendo/portendo/: __init__.py
deepnlu/services/portendo/portendo/bp/: __init__.py  portendo.py
deepnlu/services/portendo/portendo/dmo/: __init__.py  computer_exclude_allof.py  computer_exclude_oneof.py  computer_include_recursive.py  confidence_exclude_allof.py  input_tokens_transform.py  mapping_remove_duplicates.py
deepnlu/services/portendo/resources/: sample-classifications.yml
deepnlu/services/portendo/schema/bp/: __init__.py  schema_orchestrator.py
deepnlu/services/portendo/schema/dmo/: computer_exclude_allof.py  computer_exclude_oneof.py  (+19 more)
deepnlu/services/portendo/svc/: __init__.py  predict_mapping.py  read_mapping.py  select_mapping.py
deepnlu/services/portendo/tests/: driver.py  test_portendo.py  test_read_mapping.py
(+1035 files in other folders)
