[tool.poetry]
authors = ["Craig Trim <craig@grafflr.ai>"]
description = "A Natural Language Understanding toolkit combining Semantic Web and Deep Learning"
name = "deepnlu"
version = "0.1.0"

[tool.poetry.dependencies]
baseblock = "0.1.1"
nltk = "3.7"
pandas = "^1.4.0"
python = "3.8.5"
scipy = "1.8.0"
spacy = "3.2.4"
textacy = "0.12.0"
type-enforce = "^3.9.0"

[tool.poetry.dev-dependencies]
askowl = {path = "lib/askowl-0.1.2-py3-none-any.whl"}
autopep8 = "^1.6.0"
pytest = "*"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0.tar.gz"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
