[tool.poetry]
authors = ["Craig <craig@grafflr.ai>"]
description = ""
name = "accipio"
version = "0.1.0"

[tool.poetry.dependencies.en_core_web_sm]
url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.2.0/en_core_web_sm-3.2.0.tar.gz"

[tool.poetry.dependencies]
baseblock = "0.1.1"
nltk = "3.7"
python = "3.8.5"
spacy = "3.2.4"

[tool.poetry.dev-dependencies]
datablock = {path = "../../blocks/datablock"}
ipykernel = "^6.5.1"
pytest = "^7.1.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
