[tool.poetry]
authors = ["Craig Trim <craig@grafflr.ai>"]
description = ""
name = "portendo"
version = "0.1.0"

[tool.poetry.dependencies]
baseblock = "0.1.1"
python = "3.8.5"

[tool.poetry.dev-dependencies]
datablock = {path = "../../blocks/datablock"}
pytest = "^7.1.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
